force-app/main/default/objects/EntityCertification__c/EntityCertification__c.object-meta.xml
<CustomObject>
    <description>Objets stockant les certifications des entités</description>
    <label>Certification entité</label>
    <nameField>
        <displayFormat>ECERT/{0000000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications entité</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>