force-app/main/default/objects/EntityCertification__c/fields/active__c.field-meta.xml
<CustomField>
    <fullName>active__c</fullName>
    <formula>AND(startDate__c &lt;= TODAY(),
OR(ISNULL(endDate__c), TODAY() &lt;= endDate__c)
)</formula>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>