force-app/main/default/objects/EntityCertification__c/fields/entity__c.field-meta.xml
<CustomField>
    <fullName>entity__c</fullName>
    <label>Entité</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certifications entité</relationshipLabel>
    <relationshipName>EntityCertification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>